--- a/src/app/modules/form-list/form-list.component.html
+++ b/src/app/modules/form-list/form-list.component.html
@@ -1,1 +1,7 @@
-<p>form-list works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h4>Sunbird Form Configuration Management</h4>
+    </div>
+  </div>
+</div>
