Added list and details page

--- a/src/app/modules/form-list/form-list.component.html
+++ b/src/app/modules/form-list/form-list.component.html
@@ -1,7 +1,15 @@
 <div class="container">
+
   <div class="row">
-    <div class="col-md-12">
-      <h4>Sunbird Form Configuration Management</h4>
+    <div class="col-md-12 text-center my-4">
+      <h4>Sunbird Forms Configuration Management</h4>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4 filters-container">
+      <p-dropdown [options]="cities" optionLabel="name"></p-dropdown>
+
     </div>
   </div>
 </div>
