--- a/src/app/modules/form-list/form-list.component.html
+++ b/src/app/modules/form-list/form-list.component.html
@@ -7,24 +7,34 @@
   </div>
 
   <div class="row">
-    <div class="col-md-4 filters-container">
-      <p-dropdown [options]="cities" optionLabel="name"></p-dropdown>
 
+    <div class="col-md-12 text-left">
+      <p>Select filter(s) to fetch form configuration</p>
+    </div>
+    <div class="col-md-3 p-fluid filters-container">
+      <p-dropdown [options]="cities" placeholder="Select a City" optionLabel="name"></p-dropdown>
     </div>
 
-    <p-dropdown [options]="cities"  optionLabel="name" [filter]="true" filterBy="name" [showClear]="true" placeholder="Select a Country">
-      <ng-template pTemplate="selectedItem">
-          <!-- <div class="country-item country-item-value"  *ngIf="selectedCountry">
-              <img src="assets/showcase/images/demo/flag/flag_placeholder.png" [class]="'flag flag-' + selectedCountry.code.toLowerCase()" />
-              <div>{{selectedCountry.name}}</div>
-          </div> -->
-      </ng-template>
-      <ng-template let-country pTemplate="item">
+    <div class="col-md-3 p-fluid filters-container">
+      <p-dropdown [options]="cities" optionLabel="name" [filter]="true" filterBy="name" [showClear]="true"
+        placeholder="Select a Country">
+        <ng-template pTemplate="selectedItem">
+        </ng-template>
+        <ng-template let-country pTemplate="item">
           <div class="country-item">
-              <div>{{country.name}}</div>
+            <div>{{country.name}}</div>
           </div>
-      </ng-template>
-  </p-dropdown>
+        </ng-template>
+      </p-dropdown>
+    </div>
+
+    <div class="col-md-3 p-fluid filters-container">
+      <p-dropdown [options]="cities" optionLabel="name"></p-dropdown>
+    </div>
+
+    <div class="col-md-3 p-fluid filters-container">
+      <p-dropdown [options]="cities" optionLabel="name"></p-dropdown>
+    </div>
 
   </div>
 </div>
